<resources>
    <string name="app_name">Edu App</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="log_in_to_your_account">Log in to your account</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="account_type">Account Type</string>
    <string name="continue_as_a_guest">continue as a guest</string>
    <string name="email_address">Email address</string>
    <string name="manual_sign_up">Manual Sign up</string>
    <string name="home">home</string>
    <string name="classes">classes</string>
    <string name="notification">Notifications</string>
    <string name="messages">Messages</string>
    <string name="hi">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries but also the leap into electronic typesetting remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>


    <string-array name="types_of_account">
        <item>Teacher</item>
        <item>Student</item>
        <item>Parent</item>
        <item>Manager</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_schools">My Schools</string>
    <string name="see_all">See all</string>
    <string name="add_new">add new</string>
    <string name="profile_icon">profile icon</string>
    <string name="activity">Activity</string>
    <string name="select_to_add_new">Select to add new</string>
    <string name="school">School</string>
    <string name="category">Category</string>
    <string name="parent">Parent</string>
    <string name="student">Student</string>
    <string name="teacher">Teacher</string>
    <string name="_class">Class</string>
    <string name="profile">Profile</string>
    <string name="edit">Edit</string>
    <string name="discover">Discover</string>
    <string name="add_new_cap">Add new</string>
    <string name="add_new_school_teacher_student">Add new school teacher student parent.</string>
    <string name="teachers">Teachers</string>
    <string name="view_edit_add_teachers">View Edit Add teachers.</string>
    <string name="schools">Schools</string>
    <string name="view_edit_add_schools">View Edit Add schools.</string>
    <string name="account_settings">account settings</string>
    <string name="profile_information">Profile Information</string>
    <string name="name_email_security">Name Email Security.</string>
    <string name="media">Media</string>
    <string name="control_your_media_library">Control your media library.</string>
    <string name="general">general</string>
    <string name="rate_our_app">Rate Our App</string>
    <string name="rate_review_us"><![CDATA[Rate & Review us.]]></string>
    <string name="my_classes">My Classes</string>
    <string name="mask_as_read">Mask as read</string>
    <string name="log_out">Log out</string>
    <string name="add_first_school">Add First school</string>
    <string name="school_name">School name</string>
    <string name="location">Location</string>

</resources>
