<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/log_in_to_your_account"
            android:textColor="@color/text_color"
            android:textSize="18sp"
            android:textStyle="bold" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_16"
            android:text="@string/username" />

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/marginTop_4"
            android:layout_marginEnd="@dimen/margin_16"
            android:background="@drawable/bg_input_fields"
            android:elevation="4dp"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:textDirection="locale"
            android:textSize="14sp" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_16"
            android:text="@string/password" />

        <EditText
            style="@style/edittext_style_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_input_fields"
            android:elevation="4dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textDirection="locale"
            android:textSize="14sp" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_16"
            android:text="@string/account_type" />

        <Spinner
            style="@style/edittext_style_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_input_fields"
            android:elevation="4dp"
            android:entries="@array/types_of_account" />

        <com.google.android.material.button.MaterialButton
            style="@style/edittext_style_register"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="@dimen/margin_16"
            android:elevation="4dp"
            app:backgroundTint="@color/colorPrimaryDark"
            android:text="@string/log_in" />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginEnd="@dimen/margin_16"
            android:text="@string/continue_as_a_guest"
            android:textColor="@color/colorPrimaryDark"
            app:rippleColor="@color/colorPrimaryDark" />


    </LinearLayout>
</ScrollView>